added squirrel highlight stroke

--- a/Main.tex
+++ b/Main.tex
@@ -19,7 +19,7 @@
 %% PROFILE SIDE BAR %%
 %%%%%%%%%%%%%%%%%%%%%%
 % personal info
-\profilepic{desk_squirrel.png}          % path of profile pic
+\profilepic{squirrel2.png}          % path of profile pic
 \cvname{Dr. Marc Lange}                   % your name
 \cvjobtitle{Mathematik\\Analytik\\Data Science}          % your actual job position
 \cvaddress{Hamburg, Deutschland}       % address
